// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListCooccurrences lists all cooccurrences 1`] = `
Object {
  "data": Object {
    "ListCooccurrences": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listCooccurrenceTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listCooccurrenceTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListCooccurrences sorts: by updatedAt DESC 1`] = `
Object {
  "data": Object {
    "ListCooccurrences": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listCooccurrenceTest2",
            "updatedAt": "2020-02-03T00:02:00.000Z",
          },
        },
        Object {
          "node": Object {
            "id": "listCooccurrenceTest1",
            "updatedAt": "2020-02-03T00:01:00.000Z",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;
